# manim-flow

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  MANIM_ANIMATION_GUIDELINES.md  Makefile  NOTICE  README.md  THIRD_PARTY_NOTICES.md  butterfly_final.py  fixed_opening.py  heart_curve.py  lissajous_curves.py  main.py  program.md  pyproject.toml
.github/workflows/: ci.yml
examples/: Why_Your_Brain_Fails_at_This_Simple_Prob_FINAL.json
manimflow/: __init__.py  agent.py  benchmark.py  cli.py  code_editor.py  code_sanitizer.py  codegen.py  concept_graph.py  design_system.py  domain_knowledge.py  edge_tts_service.py  editor.py  evaluator.py  internal_benchmark.py  llm.py  manim_reference.py  music.py  narrative_reviewer.py  pipeline.py  platform.py  renderer.py  screenplay.py  screenplay_validator.py  spatial_analyzer.py  step_test.py  story.py  sync.py  timing.py  topics.py  tracing.py  transitions.py  voiceover.py  wireframe.py  writers_room.py
manimflow/core/: __init__.py  agent.py  config.py  edge_tts_service.py  tracing.py
manimflow/deprecated/: editor.py  engagement.py  project.py  step_test.py
manimflow/knowledge/: INSTRUCTIONS.md  search.py  tool.py  vocabulary.py
manimflow/postproduction/: __init__.py  evaluator.py  music.py  thumbnail.py  timing.py  voiceover.py
manimflow/preproduction/: __init__.py  design_system.py  screenplay.py  screenplay_validator.py  writers_room.py
manimflow/production/: __init__.py  code_editor.py  code_sanitizer.py  codegen.py  layout_checker.py  renderer.py  scene_inspector.py  (+2 more)
tests/: test_smoke.py
(+160 files in other folders)
