[project]
name = "manimflow"
version = "0.1.0"
description = "A pipeline for generating Manim animations in 3Blue1Brown style"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.84.0",
    "certifi>=2026.2.25",
    "edge-tts>=7.2.7",
    "manim>=0.19.0",
    "truststore>=0.10.4",
]

[project.scripts]
manimflow = "manimflow.cli:main"
