[project]
name = "manimflow"
version = "0.1.0"
description = "A pipeline for generating Manim animations in 3Blue1Brown style"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.84.0",
    "certifi>=2026.2.25",
    "edge-tts>=7.2.7",
    "manim>=0.19.0",
    "manim-voiceover[azure,gtts]>=0.3.7",
    "openai-whisper>=20250625",
    "setuptools<81",
    "stable-ts>=2.19.1",
    "langfuse>=2.0.0",
    "tenacity>=9.1.4",
    "truststore>=0.10.4",
]

[project.scripts]
manimflow = "manimflow.cli:main"

[tool.setuptools.packages.find]
include = ["manimflow*"]
